added report section

--- a/views/dashboard/menuItemDelete.ejs
+++ b/views/dashboard/menuItemDelete.ejs
@@ -84,7 +84,7 @@
             <form
               id="deleteMenuItemForm"
               method="POST"
-              action="/dashboard/menu-items/delete/<%= menuItem._id %>?_method=DELETE"
+              action="/dashboard/menu-items/delete/<%= menuItem._id %>"
             >
               <input type="hidden" name="itemId" value="<%= menuItem._id %>" />
 
