--- a/views/dashboard/menuItemEdit.ejs
+++ b/views/dashboard/menuItemEdit.ejs
@@ -123,7 +123,7 @@
             id="updateMenuItemForm"
             class="p-4 sm:p-6 space-y-6"
             method="POST"
-            action="/dashboard/menu-items/edit/<%= menuItem._id %>?_method=PUT"
+            action="/dashboard/menu-items/edit/<%= menuItem._id %>"
           >
             <!-- Basic Information -->
             <div class="space-y-4">
